# flower-opennebula

./: .gitignore  README.md
.planning/: INTEGRATION-CHECK.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
appliances/flower_service/: 2b2fbd55-751a-4b58-b698-692b21c1b06f.yaml  49da1d48-717e-44c2-856b-850687afd73a.yaml  54dc63b2-07dc-4469-8ec9-b31a6be2f926.yaml  8b437ffe-7b90-4dc0-a453-f0646b11ab09.yaml  CHANGELOG.md  README.md  appliance-superlink.sh  appliance-supernode.sh  appliance.sh  b4d08fae-f02d-4061-b130-870e4a9a93f8.yaml  context.yaml  metadata.yaml  tests.yaml
appliances/flower_superlink/: 2b2fbd55-751a-4b58-b698-692b21c1b06f.yaml  CHANGELOG.md  README.md  appliance-superlink.sh  context.yaml  metadata.yaml  tests.yaml
appliances/flower_supernode/: 54dc63b2-07dc-4469-8ec9-b31a6be2f926.yaml  CHANGELOG.md  (+5 more)
dashboard/: app.py
demo/: .gitignore  Dockerfile.supernode  Dockerfile.supernode-llm  Dockerfile.supernode-pytorch  Dockerfile.supernode-sklearn  Dockerfile.supernode-tensorflow  README.md  pyproject.toml  quickstart.sh
demo/llm/: pyproject.toml
demo/llm/flower_demo/: __init__.py  client_app.py  dataset.py  model.py  server_app.py
demo/tensorflow/: .gitignore  pyproject.toml
demo/tensorflow/flower_demo/: __init__.py  client_app.py  model.py  server_app.py
marketplace/: 2b2fbd55-751a-4b58-b698-692b21c1b06f.yaml  49da1d48-717e-44c2-856b-850687afd73a.yaml  54dc63b2-07dc-4469-8ec9-b31a6be2f926.yaml  8b437ffe-7b90-4dc0-a453-f0646b11ab09.yaml  CHANGELOG.md  README.md  b4d08fae-f02d-4061-b130-870e4a9a93f8.yaml
spec/: 00-overview.md  01-superlink-appliance.md  02-supernode-appliance.md  03-contextualization-reference.md  04-tls-certificate-lifecycle.md  05-supernode-tls-trust.md  06-ml-framework-variants.md  07-use-case-templates.md  08-single-site-orchestration.md  09-training-configuration.md  10-gpu-passthrough.md  12-multi-site-federation.md  13-monitoring-observability.md  14-edge-and-auto-scaling.md
tutorial/: BUILD.md  MULTI-SITE.md  QUICKSTART.md
(+84 files in other folders)
