[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-demo-tensorflow"
version = "1.0.0"
description = "Privacy-preserving CIFAR-10 classification with Flower FL on OpenNebula (TensorFlow)"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.25.0",
    "tensorflow-cpu==2.18.1",
    "flwr-datasets[vision]>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["flower_demo"]

[tool.flwr.app]
publisher = "flower-opennebula"

[tool.flwr.app.components]
serverapp = "flower_demo.server_app:app"
clientapp = "flower_demo.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 1
batch-size = 32

[tool.flwr.federations]
default = "opennebula"

[tool.flwr.federations.opennebula]
address = "127.0.0.1:9093"
insecure = true

[tool.flwr.federations.local-sim]
options.num-supernodes = 2
